--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,7 @@
 <head>
 <title><%= page_title %></title>
 <%= javascripts %>
+<%= csrf_meta_tag %>
 <%= stylesheets %>
 <%= stylesheet_link_tag 'talks-print', :media => 'print' %>
 <meta http-equiv="content-type" content="text-html; charset=utf-8"/>
